--- a/composer.json
+++ b/composer.json
@@ -36,12 +36,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.0",
-        "symfony/framework-bundle": ">=5.4 <6.3.0",
-        "symfony/security-bundle": ">=5.4 <6.3.0",
-        "symfony/security-core": ">=5.4 <6.3.0",
-        "symfony/twig-bundle": ">=5.4 <6.3.0",
-        "symfony/form": ">=5.4 <6.3.0",
-        "symfony/http-foundation": ">=5.4 <6.3.0",
+        "symfony/framework-bundle": ">=5.4",
+        "symfony/security-bundle": ">=5.4",
+        "symfony/security-core": ">=5.4",
+        "symfony/twig-bundle": ">=5.4",
+        "symfony/form": ">=5.4",
+        "symfony/http-foundation": ">=5.4",
         "doctrine/orm": "2.11.*",
         "doctrine/dbal": "^3.2"
     }
