--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "symfony/twig-bundle": ">=5.4",
         "symfony/form": ">=5.4",
         "symfony/http-foundation": ">=5.4",
-        "doctrine/orm": "2.11.*",
+        "doctrine/orm": "^2.4",
         "doctrine/dbal": "^3.2"
     }
 }
