--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,53 @@
 name: EasyConfig Bundle CI
 
-on:
-  push:
-    branches: [ main ] # Adjust this to your main branches
-  pull_request:
-    branches: [ main ]
+on: [ push, pull_request ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  tests:
+    runs-on: ${{ matrix.operating-system }}
     strategy:
+      fail-fast: false
       matrix:
-        php-versions: [ '8.0', '8.1', '8.2'] # Add any PHP versions you want to test against
+        operating-system: [ ubuntu-latest ]
+        php-versions: [ '8.0', '8.1', '8.2' ]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
+      # Docs: https://github.com/shivammathur/setup-php
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, intl, pdo_sqlite, gd, exif, opcache, xml, dom
-          tools: composer:v2
+          tools: phpunit-bridge
+          extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite
+          coverage: xdebug
 
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
-      - name: Run PHPUnit tests
-        run: ./vendor/bin/phpunit Tests
+      - name: Cache composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          # Use composer.json for key, if composer.lock is not committed.
+          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Install Other dependencies
+        run: |
+          curl -L https://github.com/php-coveralls/php-coveralls/releases/download/v2.6.0/php-coveralls.phar -o /usr/local/bin/php-coveralls
+          chmod +x /usr/local/bin/php-coveralls
+          mkdir -p build/logs
+      - name: Run tests
+        run: XDEBUG_MODE=coverage vendor/bin/phpunit
+      - name: Upload coverage results to Coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          php-coveralls --coverage_clover=build/logs/clover.xml -v
