--- a/Resources/config/routes.yaml
+++ b/Resources/config/routes.yaml
@@ -1,44 +1,44 @@
 xiidea_easy_config_index:
         path: /
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_crud::index }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::index
 
 xiidea_easy_config_list:
         path: /list
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_crud::list }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::list
 
 xiidea_easy_config_form:
         path: /form/{key}
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_crud::form }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::form
 
 xiidea_easy_config_form_user:
         path: /user-form/{key}
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_crud::userForm }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::userForm
 
 xiidea_easy_config_form_save:
         path: /save/{key}
         methods: POST
-        defaults: { _controller: xiidea.easy_config.controller_crud::save }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::save
 
 xiidea_easy_config_form_save_user:
         path: /user/save/{key}
         methods: POST
-        defaults: { _controller: xiidea.easy_config.controller_crud::saveUserConfig }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::saveUserConfig
 
 xiidea_easy_config_value_by_key:
         path: /value/by-key
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_crud::getValueByKey }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigurationController::getValueByKey
 
 xiidea_easy_config_by_group:
         path: /group/{key}.json
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_api::getByGroup }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigApiController::getByGroup
 
 xiidea_easy_config_by_key:
         path: /value/by-key
         methods: GET
-        defaults: { _controller: xiidea.easy_config.controller_api::getByKey }
+        controller: Xiidea\EasyConfigBundle\Controller\ConfigApiController::getByKey
