--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "symfony/twig-bundle": ">=5.0 <7.0.0",
         "symfony/form": ">=5.0 <7.0.0",
         "symfony/http-foundation": ">=5.0 <7.0.0",
-        "doctrine/orm": "^2.4",
+        "doctrine/orm": "^2.4|^3.0",
         "doctrine/dbal": "^3.2"
     },
     "require-dev": {
