feat: allow orm verion 3

--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
         "symfony/twig-bundle": ">=5.0 <7.0.0",
         "symfony/form": ">=5.0 <7.0.0",
         "symfony/http-foundation": ">=5.0 <7.0.0",
-        "doctrine/orm": "^2.4",
-        "doctrine/dbal": "^3.2"
+        "doctrine/orm": "^2.4|^3.0",
+        "doctrine/dbal": "^3.2|^4.0"
     },
     "require-dev": {
         "symfony/test-pack": "^1.1"
